--- a/.github/workflows/build-typst.yml
+++ b/.github/workflows/build-typst.yml
@@ -22,8 +22,12 @@ jobs:
       with:
         typst-version: '0.13.0' 
 
+    - name: Set up font via fontist
+      uses: fontist/setup-fontist@v2
+      run: fontist install "Atkinson Hyperlegible"
+
     - name: Compile Typst document
-      run: typst compile main.typ open-letter.pdf 
+      run: typst compile main.typ open-letter.pdf --font-path ~/.fontist/fonts 
 
     - name: Upload compiled PDF
       uses: actions/upload-artifact@v4
