--- a/.github/workflows/build-typst.yml
+++ b/.github/workflows/build-typst.yml
@@ -26,7 +26,9 @@ jobs:
       uses: fontist/setup-fontist@v2
 
     - name: get font
-      run: fontist install "Atkinson Hyperlegible" "Cal Sans"
+      run: |
+       fontist install "Atkinson Hyperlegible"
+       fontist install "Atkinson Hyperlegible"
 
     - name: Get commit SHA
       run: |
