fix workflow attempt 3
fontist syntax error

--- a/.github/workflows/build-typst.yml
+++ b/.github/workflows/build-typst.yml
@@ -28,7 +28,7 @@ jobs:
     - name: get font
       run: |
        fontist install "Atkinson Hyperlegible"
-       fontist install "Atkinson Hyperlegible"
+       fontist install "Cal Sans"
 
     - name: Get commit SHA
       run: |
