--- a/.github/workflows/build-typst.yml
+++ b/.github/workflows/build-typst.yml
@@ -30,13 +30,10 @@ jobs:
        fontist install "Atkinson Hyperlegible"
        fontist install "Cal Sans"
 
-    - name: Get commit SHA
+    - name: Compile Typst document
       run: |
         FULL_SHA="${{ github.sha }}"
-        echo "Full SHA: $FULL_SHA"
-
-    - name: Compile Typst document
-      run: typst compile main.typ open-letter.pdf --input commit=${FULL_SHA:0:7}  --font-path ~/.fontist/fonts 
+        typst compile main.typ open-letter.pdf --input commit=${FULL_SHA:0:7}  --font-path ~/.fontist/fonts 
 
     - name: Upload compiled PDF
       uses: actions/upload-artifact@v4
