--- a/.github/workflows/build-typst.yml
+++ b/.github/workflows/build-typst.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+          submodules: 'recursive' # or 'true' for non-nested submodules
 
     - name: Set up specific Typst version
       uses: typst-community/setup-typst@v4
@@ -33,7 +35,7 @@ jobs:
     - name: Compile Typst document
       run: |
         FULL_SHA="${{ github.sha }}"
-        typst compile main.typ open-letter.pdf --input commit=${FULL_SHA:0:7}  --font-path ~/.fontist/fonts 
+        typst compile template/main.typ open-letter.pdf --input commit=${FULL_SHA:0:7}  --font-path ~/.fontist/fonts 
 
     - name: Upload compiled PDF
       uses: actions/upload-artifact@v4
