--- a/.github/workflows/build-typst.yml
+++ b/.github/workflows/build-typst.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Compile Typst document
       run: |
         FULL_SHA="${{ github.sha }}"
-        typst compile template/main.typ document.pdf --input commit=${FULL_SHA:0:7}  --font-path ~/.fontist/fonts 
+        typst compile template/main.typ document.pdf --root . --input commit=${FULL_SHA:0:7}  --font-path ~/.fontist/fonts 
 
     - name: Upload compiled PDF
       uses: actions/upload-artifact@v4
